cabal-version:       2.2

name:                networked-game
version:             0.1.0.1
synopsis:            Networked-game support library
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
category:            Network
build-type:          Simple

library
  exposed-modules:     NetworkedGame.Handles, NetworkedGame.Packet, NetworkedGame.Server
  build-depends:       base ^>= 4.12,
                       containers ^>= 0.6,
                       bytestring ^>= 0.10,
                       binary ^>= 0.10,
                       transformers ^>= 0.5,
                       time ^>= 1.9,
                       network ^>= 3.1.1,
  hs-source-dirs:      src
